[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mpy-coverage"
version = "0.1.0"
description = "Code coverage for MicroPython"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["coverage", "mpy-cross"]

[project.scripts]
mpy-coverage = "mpy_coverage.cli:main"

[dependency-groups]
dev = ["pytest", "ruff"]
