[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mpy-coverage"
dynamic = ["version"]
description = "Code coverage for MicroPython"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["coverage", "mpy-cross"]

[project.scripts]
mpy-coverage = "mpy_coverage.cli:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mpy_coverage/_version.py"

[tool.ruff]
line-length = 99
extend-exclude = ["src/mpy_coverage/_vendor"]
